tests/ui/traits/non_lifetime_binders/shadowed.stderr
error[E0403]: the name `T` is already used for a generic parameter in this item's generic parameters
  --> $DIR/shadowed.rs:3:28
   |
LL | fn function<T>() where for<T> (): Sized {}
   |             -              ^ already used
   |             |
   |             first use of `T`

error[E0403]: the name `T` is already used for a generic parameter in this item's generic parameters
  --> $DIR/shadowed.rs:6:31
   |
LL | struct Struct<T>(T) where for<T> (): Sized;
   |               -               ^ already used
   |               |
   |               first use of `T`

error[E0403]: the name `T` is already used for a generic parameter in this item's generic parameters
  --> $DIR/shadowed.rs:10:27
   |
LL | impl<T> Struct<T> {
   |      - first use of `T`
LL |     fn method() where for<T> (): Sized {}
   |                           ^ already used

error[E0403]: the name `T` is already used for a generic parameter in this item's generic parameters
  --> $DIR/shadowed.rs:14:28
   |
LL | fn repeated() where for<T, T> (): Sized {}
   |                         -  ^ already used
   |                         |
   |                         first use of `T`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0403`.
